<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/about_logo"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/version_info"
        android:text="@string/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/powered_by"
        android:text="@string/powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:linksClickable="true"
        android:clickable="true"
        android:enabled="true" />

    <Button
        android:id="@+id/send_feedback"
        android:layout_marginTop="10dp"
        android:text="@string/send_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>