<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/dialog_fade"
    >

    <android.support.v7.widget.CardView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced"
                android:textSize="18sp"
                android:textColor="@color/secondaryTextColor"
                android:fontFamily="sans-serif"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|number"
                android:id="@+id/address"
                android:hint="@string/prompt_ipaddress"
                android:gravity="center"
                android:textSize="14sp"
                android:fontFamily="sans-serif"

                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"

                android:layout_marginBottom="16dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_ssl"
                    android:id="@+id/ssl"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginRight="16dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions|number"
                    android:id="@+id/port"
                    android:hint="@string/prompt_port"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginBottom="16dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/action_cancel"
                    android:textColor="@color/primaryColor"
                    android:id="@+id/button_cancel"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_save"
                    android:padding="8dp"
                    android:textColor="@color/primaryColor"
                    android:id="@+id/button_ok"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>