<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/accountView"
    android:background="@color/secondaryColor"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_account"
        android:layout_gravity="center"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
         />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_desc"
        />


    <Button
        android:id="@+id/buttonNormalLogin"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_normal"
        android:background="@drawable/rounded_button"
        android:textColor="@color/primaryTextColor"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:ellipsize="start"
        android:textSize="14sp"
        android:elevation="5dp"
        android:fontFamily="sans-serif"
        />

    <Button
        android:id="@+id/buttonEnterpriseLogin"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_enterprise"
        android:background="@drawable/rounded_button"
        android:textColor="@color/primaryTextColor"
        android:layout_marginBottom="20dp"
        android:ellipsize="start"
        android:textSize="14sp"
        android:elevation="5dp"
        android:fontFamily="sans-serif"
        />

    </LinearLayout>
</RelativeLayout>