<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_fade"
    android:elevation="11dp"
    android:gravity="center"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="12dp"
        android:id="@+id/card"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_share_link"
                android:textSize="20dp"
                android:padding="20dp"
                android:id="@id/title"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/form"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expiration_time"
                        />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner"
                        android:prompt="@string/expiration_time"
                        />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/protect_with_password"
                        android:id="@+id/checkBoxPassword" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/password1" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/password2" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notify_me"
                        android:id="@+id/checkBoxNotify" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/email" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/progressBar"
                >
                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_margin="8dp"
                android:id="@+id/buttons_bar"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/action_cancel"
                    android:textColor="@color/primaryColor"
                    android:id="@+id/button_cancel"
                    android:background="?attr/selectableItemBackground"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_create"
                    android:padding="8dp"
                    android:textColor="@color/primaryColor"
                    android:id="@+id/button_ok"
                    android:background="?attr/selectableItemBackground"
                    />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>