<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/mainActivity"
    >
    <include
        layout="@layout/app_toolbar"
        android:id="@id/app_bar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:gravity="right"
        android:padding="8dp"
        android:background="@color/secondaryDividerColor"

        android:layout_alignParentBottom="true"
        android:id="@+id/buttons_bar"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/action_cancel"
            android:textColor="@color/primaryColor"
            android:id="@+id/button_cancel"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/action_newdir"
            android:textColor="@color/primaryColor"
            android:id="@+id/button_newdir"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_upload"
            android:padding="8dp"
            android:textColor="@color/primaryColor"
            android:id="@+id/button_ok"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="sans-serif"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_below="@id/app_bar"
        android:layout_above="@id/buttons_bar"
        android:orientation="vertical"
        android:id="@+id/working_area"
        >

    </LinearLayout>
</RelativeLayout>